# luminos-greeter

./: README.md  meson.build  meson_options.txt  uncrustify.cfg
build-aux/: postinstall.py
data/: io.github.webkit2gtk-greeter.gschema.xml  luminos-greeter.appdata.xml.in  luminos-greeter.desktop.in  meson.build  webkit2gtk-greeter.appdata.xml.in  webkitgtk-greeter.appdata.xml.in  webkitgtk-greeter.desktop.in
data/_vendor/: mock.js  theme_utils.js
data/_vendor/css/: bootstrap-theme.css
data/backgrounds/rotating-rubix/: index.bg  index.html  main.js
data/backgrounds/space-sphere/: index.bg  index.html  main.js  style.css
data/themes/default/: index.html  index.theme
data/themes/default/js/: greeter.js
data/themes/luminos/: background.html  config.json  index.html
data/themes/luminos/css/: background.css  clock.css  style.css
data/themes/luminos/js/: animation.js  background.js  bg_utils.js  cache.js  clock.js  config.js  dot-prop.js  greeter.js  logging.js  mock.js  theme_utils.js
extensions/: jsutils.vala  meson.build  utils.vala
extensions/config-manager/: ClientConfigManager.vala  ConfigManager.vala  main.vala
extensions/core/: DesktopFileReader.vala  jsapi.vala  lightdm.vala  main.vala
greeter/: GreeterApplication.vala  config.vala.in  main.vala  meson.build  webkit2gtk-greeter.gresource.xml  webkitgtk-greeter.gresource.xml
greeter/constants/: WindowType.vala
greeter/ui/: window.ui
greeter/utils/: ConfigReader.vala  GioUtil.vala
greeter/widgets/: WebContainer.vala  WebView.vala  Window.vala
po/: POTFILES
resources/: greeter_config.js  greeter_util.js  luminos-greeter.gresource.xml  meson.build  theme_utils.js  window.ui
tests/: meson.build  mock-object.vala  test-case.vala  test-client.vala  test-extension.vala  test-greeter.vala
tests/extensions/: utils-test.vala
tests/greeter/: greeter-application-test.vala
vapi/: liblightdm-gobject-1.vapi  webkit2gtk-4.0.vapi  webkit2gtk-greeter.vapi  webkit2gtk-web-extension-4.0.vapi
